--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -49,7 +49,7 @@
             {{ !isSignUp ? "Sign in to your account" : "Create account"}}
           </h2>
 
-          <form class="space-y-6" [formGroup]="sessionForm" (submit)="onSubmit()">
+          <form class="space-y-6" [formGroup]="sessionForm" (ngSubmit)="onSubmit()">
 
             @if ( isSignUp ) {
               <div class="flex gap-x-1 sm:flex-row flex-col">
@@ -140,6 +140,3 @@
     </div>
   </div>
 </div>
-
-
-
