--- a/src/styles.css
+++ b/src/styles.css
@@ -1,10 +1,6 @@
-@layer tailwind-base, primeng, tailwind-utilities;
-        
-@layer tailwind-base {
-    @tailwind base;
-}
+@import "primeicons/primeicons.css";
 
-@layer tailwind-utilities {
-    @tailwind components;
-    @tailwind utilities;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
