refactor: changes in app colors

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<main class="min-h-[100vh] bg-slate-100">
+<main class="min-h-[100vh] bg-custom-gradient">
   <app-toast></app-toast>
   <router-outlet></router-outlet>
 </main>
