--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,8 +1,11 @@
-<div class="flex min-h-full flex-col justify-center items-center px-6 py-12 lg:px-8 bg-slate-100">
+<div class="flex min-h-full flex-col justify-center items-center px-6 py-12 lg:px-8">
 
-  <img class="mx-auto mb-10 h-10 w-auto" src="https://tailwindui.com/plus/img/logos/mark.svg?color=indigo&shade=600" alt="Your Company">
+  <div class="flex gap-3 items-center justify-center mx-auto mb-10 h-10 w-auto">
+    <fa-icon [icon]='icons.logo' class="text-4xl text-white"></fa-icon>
+    <span class="text-4xl text-white">Movie hub</span>
+  </div>
 
-  <div class="bg-gray-300 rounded-lg sm:mx-auto sm:w-full sm:max-w-md">
+  <div class="bg-black/10 rounded-lg sm:mx-auto sm:w-full sm:max-w-md backdrop-blur-sm">
 
     <!-- TOOGLE -->
     <div class="sm:mx-auto sm:w-full sm:max-w-md  rounded-t-lg ">
@@ -12,7 +15,7 @@
           (click)="toggleState()"
         >
           <div
-            class="absolute w-[calc(100%_/_2)] h-7 bg-white rounded-t-lg transition-transform duration-300 ease-in-out border-br-[-50%]"
+            class="absolute w-[calc(100%_/_2)] h-7 bg-white/20 rounded-t-lg transition-transform duration-300 ease-in-out border-br-[-50%]"
             [ngClass]="{
               'translate-x-0': !isSignUp,
               'translate-x-[95%] sm:translate-x-[96.5%] ': isSignUp }"
@@ -21,8 +24,8 @@
             <span
               class="flex-1 text-center z-10 transition-colors duration-300 text-sm"
               [ngClass]="{
-                'text-black font-bold ': !isSignUp,
-                'text-gray-500 bg-transparent after:bg-transparent before:bg-transparent': isSignUp}"
+                'text-white font-bold ': !isSignUp,
+                'text-slate-300 bg-transparent after:bg-transparent before:bg-transparent': isSignUp}"
             >
                 <!-- after:absolute after:bottom-[0px] after:right-[calc(50%-14px)] after:h-[10px] after:w-[10px] after:rounded-bl-lg after:bg-gray-300  before:absolute before:bottom-[-4px] before:right-[calc(50%-14px)] before:h-[10px] before:w-[10px] rounded-t-md before:bg-white -->
 
@@ -31,8 +34,8 @@
             <span
               class="flex-1 text-center z-10 transition-colors duration-300 text-sm"
               [ngClass]="{
-                'text-black font-bold bg-transparent ': isSignUp,
-                'text-gray-500 bg-transparent': !isSignUp}"
+                'text-white font-bold bg-transparent ': isSignUp,
+                'text-slate-300 bg-transparent': !isSignUp}"
             >
             <!-- after:absolute after:h-[10px] after:w-[10px] after:bg-gray-300 after:left-[calc(50%-14.5px)] after:bottom-[0px] after:rounded-br-lg before:absolute before:h-[10px] before:w-[10px] before:bg-white before:left-[calc(50%-10px)] before:bottom-[-4px] -->
               Sign Up
@@ -43,8 +46,8 @@
     </div>
 
     <div class=" sm:mx-auto sm:w-full sm:max-w-md p-1 pt-0">
-      <div class="bg-white p-10 rounded-b-lg min-w-[20rem]">
-          <h2 class="mb-8 text-center text-2xl/9 font-bold tracking-tight text-gray-900">
+      <div class="bg-white/20 p-10 rounded-b-lg min-w-[20rem] backdrop-blur-sm">
+          <h2 class="mb-8 text-center text-2xl/9 font-bold tracking-tight text-white">
             {{ !isSignUp ? "Sign in to your account" : "Create account"}}
           </h2>
 
@@ -53,9 +56,9 @@
             @if ( isSignUp ) {
               <div class="flex gap-x-1 sm:flex-row flex-col">
                 <div class="w-full">
-                  <label for="firstName" class="block text-sm/6 font-medium text-gray-900">First Name</label>
+                  <label for="firstName" class="block text-sm/6 font-medium text-white">First Name</label>
                   <div class="mt-2">
-                    <input formControlName="firstName" id="firstName" name="firstName" type="text" autocomplete="name" required class="block w-full rounded-md border-0 p-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm/6 outline-0">
+                    <input formControlName="firstName" id="firstName" name="firstName" type="text" autocomplete="name" required class="block w-full rounded-md border-0 p-1.5 text-gray-600 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm/6 outline-0">
                   </div>
                   @if (firstName?.errors?.['required'] && firstName?.touched) {
                     <div class="flex animate-fall text-red-500 transition-all duration-500 gap-1 mt-1">
@@ -65,9 +68,9 @@
                   }
                 </div>
                 <div class="w-full mt-6 sm:mt-0">
-                  <label for="lastName" class="block text-sm/6 font-medium text-gray-900">Last Name</label>
+                  <label for="lastName" class="block text-sm/6 font-medium text-white">Last Name</label>
                   <div class="mt-2">
-                    <input formControlName="lastName" id="lastName" name="lastName" type="text" autocomplete="cc-name" required class="block w-full rounded-md border-0 p-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm/6 outline-0">
+                    <input formControlName="lastName" id="lastName" name="lastName" type="text" autocomplete="cc-name" required class="block w-full rounded-md border-0 p-1.5 text-gray-600 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm/6 outline-0">
                   </div>
                   @if (lastName?.errors?.['required'] && lastName?.touched) {
                     <div class="flex animate-fall text-red-500 transition-all duration-500 gap-1 mt-1">
@@ -80,9 +83,9 @@
             }
 
             <div>
-              <label for="email" class="block text-sm/6 font-medium text-gray-900">Email address</label>
+              <label for="email" class="block text-sm/6 font-medium text-white">Email address</label>
               <div class="mt-2">
-                <input formControlName="email" id="email" name="email" type="email" autocomplete="email" required class="block w-full rounded-md border-0 p-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm/6 outline-0">
+                <input formControlName="email" id="email" name="email" type="email" autocomplete="email" required class="block w-full rounded-md border-0 p-1.5 text-gray-600  shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm/6 outline-0">
               </div>
               @if (email?.errors?.['required'] && email?.touched) {
                 <div class="flex animate-fall text-red-500 transition-all duration-500 gap-1 mt-1">
@@ -100,15 +103,15 @@
 
             <div>
               <div class="flex items-center justify-between">
-                <label for="password" class="block text-sm/6 font-medium text-gray-900">Password</label>
-                @if (!isSignUp) {
+                <label for="password" class="block text-sm/6 font-medium text-white">Password</label>
+                <!-- @if (!isSignUp) {
                   <div class="text-sm">
                     <a href="#" class="font-semibold text-indigo-600 hover:text-indigo-500">Forgot password?</a>
                   </div>
-                }
+                } -->
               </div>
               <div class="mt-2">
-                <input formControlName="password" id="password" name="password" type="password" autocomplete="current-password" required class="block w-full rounded-md border-0 p-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm/6 outline-0">
+                <input formControlName="password" id="password" name="password" type="password" autocomplete="current-password" required class="block w-full rounded-md border-0 p-1.5 text-gray-600 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm/6 outline-0">
               </div>
               @if (password?.errors?.['required'] && password?.touched) {
                 <div class="flex animate-fall text-red-500 transition-all duration-500 gap-1 mt-1">
@@ -125,14 +128,14 @@
             </div>
 
             <div>
-              <button type="submit" class="flex w-full justify-center rounded-md bg-indigo-600 px-3 py-1.5 text-sm/6 font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">
+              <button type="submit" class="flex w-full justify-center rounded-md bg-[#ff0051] px-3 py-1.5 text-sm/6 font-semibold text-white shadow-sm hover:bg-[#ff0051e8] focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">
                 {{ isSignUp ? "Create Account" : "Sign In"}}
               </button>
             </div>
           </form>
           @if ( !isSignUp ) {
-            <p class="mt-10 text-center text-sm/6 text-gray-500">Don't have an account yet?
-              <strong class="font-semibold text-indigo-600 hover:text-indigo-500 cursor-pointer" (click)="toggleState()">Create One</strong>
+            <p class="mt-10 text-center text-sm/6 text-slate-300">Don't have an account yet?
+              <strong class="font-semibold text-white hover:text-[#ff0051e8] cursor-pointer" (click)="toggleState()">Create One</strong>
             </p>
           }
       </div>
