--- a/src/app/components/movies-grid/movies-grid.component.html
+++ b/src/app/components/movies-grid/movies-grid.component.html
@@ -7,7 +7,7 @@
 
 <div class="grid grid-cols-[repeat(auto-fit,minmax(150px,1fr))] gap-4">
   @for (movie of movies; track $index) {
-    <div class="group relative rounded-lg overflow-hidden shadow-sm">
+    <div class="group relative rounded-lg overflow-hidden shadow-sm" (click)="navigateToDetails(movie.id)">
       <!-- Imagen de la película -->
       <img src="{{ movie.image }}" alt="{{ movie.title }}" class="w-full h-auto rounded-lg transition-transform duration-300 group-hover:scale-110">
 
