fix: changing responsive layout from movie detail

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -48,7 +48,7 @@
     <div class=" sm:mx-auto sm:w-full sm:max-w-md p-1 pt-0">
       <div class="bg-white/20 p-10 rounded-b-lg min-w-[20rem] backdrop-blur-sm">
           <h2 class="mb-8 text-center text-2xl/9 font-bold tracking-tight text-white">
-            {{ !isSignUp ? "Sign in to your account" : "Create account"}}
+            {{ !isSignUp ? "Sign in to your account" : "Let's create an account"}}
           </h2>
 
           <form class="space-y-6" [formGroup]="sessionForm" (ngSubmit)="onSubmit()">
