feat: update, back and delete buttons added for admin view win movie details

--- a/src/app/components/movie-details/movie-details.component.html
+++ b/src/app/components/movie-details/movie-details.component.html
@@ -1,9 +1,27 @@
 <div class="w-full h-full">
+  @if (userRole == "ADMIN") {
+    <div class="flex w-full ">
+      <button routerLink="/movies" class="text-white lg:text-lg md:text-lg items-center m-3 p-3 mx-0 rounded-lg bg-black bg-opacity-40 flex align-center justify-center w-[10%] sm:text-2xs sm:px-max hover:bg-opacity-80 hover:bg-blue-950">
+        <fa-icon [icon]="faIcons.back"  [ngStyle]="{ color: '#ffff' }" class="mr-2"></fa-icon> 
+        Back
+      </button>
+      <div class="flex w-[90%] justify-end">
+        <button class="text-white flex lg:text-lg md:text-lg justify-end m-3 p-3 px-5 rounded-lg bg-green-500 bg-opacity-40 gap-x-3 hover:bg-green-700 sm:text-2xs">
+          <fa-icon [icon]="faIcons.edit"  [ngStyle]="{ color: '#ffff' }"></fa-icon> 
+          Edit
+        </button>
+        <button class="text-white flex gap-x-3 lg:text-lg md:text-lg m-3 mx-0 p-3 px-5 rounded-lg bg-red-600 bg-opacity-40 hover:bg-red-700 sm:text-2xs">
+          <fa-icon [icon]="faIcons.delete"  [ngStyle]="{ color: '#ffff' }"></fa-icon> 
+          Delete
+        </button>
+      </div>
+    </div>
+  }
   <div class="flex items-center justify-center bg-black bg-opacity-40 rounded-lg shadow-lg overflow-hidden min-h-[calc(100vh-9rem)] w-full">
     <div class="md:flex md:flex-col lg:flex-row my-auto mx-4 items-center justify-center">
       <!-- Poster -->
       <div class="flex md:w-2/5 sm:w-2/4 px-4 m-10 justify-center items-center md:mx-auto sm:mx-auto h-full mx-3">
-        <img [src]="movie.image" [alt]="movie.title" class="w-[70%] h-auto object-cover rounded-lg min-h-56 sm:w-[70%] md:max-h-96 md:min-w-full lg:max-h-full">
+        <img [src]="movie.image" [alt]="movie.title" class="w-[70%] h-auto object-cover rounded-lg min-h-56 sm:w-[70%] md:max-h-96 md:min-w-full lg:max-h-full"> 
       </div>
 
       <!-- Details -->
