--- a/src/app/components/movie-details/movie-details.component.html
+++ b/src/app/components/movie-details/movie-details.component.html
@@ -1,22 +1,23 @@
 <div class="w-full h-full">
   @if (userRole == "ADMIN") {
     <div class="flex w-full ">
-      <button routerLink="/movies" class="text-white lg:text-lg md:text-lg items-center m-3 p-3 mx-0 rounded-lg bg-black bg-opacity-40 flex align-center justify-center w-[10%] sm:text-2xs sm:px-max hover:bg-opacity-80 hover:bg-blue-950">
+      <button routerLink="/movies" class="text-white lg:text-lg md:text-lg items-center m-3 p-3 mx-0 rounded-lg bg-black bg-opacity-40 flex align-center justify-center w-[10%] sm:text-2xs sm:px-max hover:bg-opacity-80 hover:bg-blue-950 mt-0">
         <fa-icon [icon]="faIcons.back"  [ngStyle]="{ color: '#ffff' }" class="mr-2"></fa-icon> 
         Back
       </button>
       <div class="flex w-[90%] justify-end">
-        <button class="text-white flex lg:text-lg md:text-lg justify-end m-3 p-3 px-5 rounded-lg bg-green-500 bg-opacity-40 gap-x-3 hover:bg-green-700 sm:text-2xs">
-          <fa-icon [icon]="faIcons.edit"  [ngStyle]="{ color: '#ffff' }"></fa-icon> 
+        <button class="text-[#030024] flex lg:text-lg md:text-lg justify-end m-3 p-3 px-5 rounded-lg bg-white bg-opacity-70 gap-x-3 font-semibold hover:bg-white m:text-2xs">
+          <fa-icon [icon]="faIcons.edit"  [ngStyle]="{ color: '#030024' }"></fa-icon> 
           Edit
         </button>
-        <button class="text-white flex gap-x-3 lg:text-lg md:text-lg m-3 mx-0 p-3 px-5 rounded-lg bg-red-600 bg-opacity-40 hover:bg-red-700 sm:text-2xs">
+        <button class="text-white flex gap-x-3 lg:text-lg md:text-lg m-3 mx-0 p-3 px-5 rounded-lg bg-rose-shadow bg-opacity-40 hover:bg-[#b0124f] sm:text-2xs" (click)="openDeleteModal()">
           <fa-icon [icon]="faIcons.delete"  [ngStyle]="{ color: '#ffff' }"></fa-icon> 
           Delete
         </button>
       </div>
     </div>
   }
+  
   <div class="flex items-center justify-center bg-black bg-opacity-40 rounded-lg shadow-lg overflow-hidden min-h-[calc(100vh-9rem)] w-full">
     <div class="md:flex md:flex-col lg:flex-row my-auto mx-4 items-center justify-center">
       <!-- Poster -->
