feat: crud services added on movies services and integrated on movies detail component

--- a/src/app/components/movie-details/movie-details.component.html
+++ b/src/app/components/movie-details/movie-details.component.html
@@ -6,7 +6,7 @@
         Back
       </button>
       <div class="flex w-[90%] justify-end">
-        <button class="text-[#030024] flex lg:text-lg md:text-lg justify-end m-3 p-3 px-5 rounded-lg bg-white bg-opacity-70 gap-x-3 font-semibold hover:bg-white m:text-2xs">
+        <button class="text-[#030024] flex lg:text-lg md:text-lg justify-end m-3 p-3 px-5 rounded-lg bg-white bg-opacity-70 gap-x-3 font-semibold hover:bg-white m:text-2xs" (click)="updateMovie()">
           <fa-icon [icon]="faIcons.edit"  [ngStyle]="{ color: '#030024' }"></fa-icon> 
           Edit
         </button>
