--- a/src/app/components/app-layout/app-layout.component.html
+++ b/src/app/components/app-layout/app-layout.component.html
@@ -17,7 +17,12 @@
     </div> -->
   </header>
   <main>
-    <div class="mx-auto max-w-7xl px-4 py-6 sm:px-6 lg:px-8">
+    <div 
+      class="mx-auto max-w-7xl pb-6 px-4 sm:px-6 lg:px-8"
+      [ngClass]="{
+        'pt-6': !currentPath.split('/')[3] || currentPath.split('/')[4] || (user.role === 'USER')
+      }"
+    >
       <router-outlet></router-outlet>
     </div>
   </main>
