--- a/src/app/components/not-found/not-found.component.html
+++ b/src/app/components/not-found/not-found.component.html
@@ -6,7 +6,7 @@
         <div class="text-yellow-400 text-2xl mb-2">🎬 Cut! Scene Not Found! 🎬</div>
         <p class="text-gray-400 text-lg mb-8">Looks like this scene didn't make the final cut...</p>
       </div>
-      
+
       <div class="space-y-4">
         <div class="flex items-center justify-center space-x-2 text-gray-400">
           <div class="w-12 h-0.5 bg-gray-700"></div>
@@ -14,12 +14,12 @@
           <div class="w-12 h-0.5 bg-gray-700"></div>
         </div>
 
-        <a routerLink="/movies"
+        <a routerLink="/app/movies"
           class="inline-block px-6 py-3 bg-pink-900 cursor-pointer text-white rounded-lg hover:bg-pink-700 transition-colors duration-300">
           Back to Main Scene 🎥
         </a>
       </div>
-      
+
       <div class="mt-8 text-gray-600">
         <p>🎬 Error ID: #404-movie-not-found</p>
       </div>
